add sms and miniailive config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,18 @@ services:
       - KULOFFICE_SERVER_HTTP_CORS_ALLOWED_METHODS=${KULOFFICE_SERVER_HTTP_CORS_ALLOWED_METHODS}
       - KULOFFICE_SERVER_HTTP_CORS_ALLOWED_HEADERS=${KULOFFICE_SERVER_HTTP_CORS_ALLOWED_HEADERS}
 
+      #SMS 
+      - KULOFFICE_SMS_BASE_URL=${KULOFFICE_SMS_BASE_URL}
+      - KULOFFICE_SMS_API_KEY=${KULOFFICE_SMS_API_KEY}
+      - KULOFFICE_SMS_PROVIDER_ID=${KULOFFICE_SMS_PROVIDER_ID}
+      - KULOFFICE_SMS_LIVE=${KULOFFICE_SMS_LIVE}
+
+      #MiniAiLive
+      - KULOFFICE_MINIAILIVE_FACE_LIVESS_URL=${KULOFFICE_MINIAILIVE_FACE_LIVENESS_URL}
+      - KULOFFICE_MINIAILIVE_FACE_MATCH_URL=${KULOFFICE_MINIAILIVE_FACE_MATCH_URL}
+      - KULOFFICE_MINIAILIVE_DOCUMENT_LIVENESS_URL=${KULOFFICE_MINIAILIVE_DOCUMENT_LIVENESS_URL}
+      - KULOFFICE_MINIAILIVE_DOCUMENT_EXTRACTION_URL=${KULOFFICE_MINIAILIVE_DOCUMENT_EXTRACTION_URL}
+      - KULOFFICE_MINIAILIVE_LIVENESS_PROBABILITY_THRESHOLD=${KULOFFICE_MINIAILIVE_LIVENESS_PROBABILITY_THRESHOLD}
       # License
       - KULOFFICE_LICENSE_KEY=${KULOFFICE_LICENSE_KEY}
     restart: unless-stopped
