--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,24 @@ KULOFFICE_BOOTSTRAP_IDP_CLIENT_SECRET=your_idp_client_secret
 KULOFFICE_BOOTSTRAP_IDP_ISSUER_URL=https://your-idp
 
 #------------------------------------------------------------------------------
+# SMS Provider Configuration (OLA)
+#------------------------------------------------------------------------------
+KULOFFICE_SMS_BASE_URL=base_url
+KULOFFICE_SMS_API_KEY=api_key
+KULOFFICE_SMS_PROVIDER_ID=provider_id
+KULOFFICE_SMS_LIVE=test
+
+
+#------------------------------------------------------------------------------
+# Provider configuration (MiniAiLive)
+#------------------------------------------------------------------------------
+KULOFFICE_MINI_AI_LIVE_FACE_LIVENESS_URL=face_liveness_url
+KULOFFICE_MINI_AI_LIVE_FACE_MATCH_URL=face_match_url
+KULOFFICE_MINI_AI_LIVE_DOCUMENT_LIVENESS_URL=document_liveness_url
+KULOFFICE_MINI_AI_LIVE_DOCUMENT_EXTRACTION_URL=document_extraction_url
+KULOFFICE_MINI_AI_LIVE_LIVENESS_PROBABILITY_THRESHOLD=0.8
+
+#------------------------------------------------------------------------------
 # Image Configuration (Optional)
 #------------------------------------------------------------------------------
 # Define which image to use (if not provided, Docker Compose defaults can be used)
