--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   kuloffice:
-    image: ${KULOFFICE_IMAGE:-pavulla/kuloffice:latest}
+    image: kulofficelocal
     container_name: kuloffice
     ports:
       # Map the HTTP port defined in .env to container port 8080.
@@ -42,29 +42,29 @@ services:
     #   timeout: 5s
     #   retries: 5
 
-  kuloffice-bootstrap:
-    image: ${KULOFFICE_BOOTSTRAP_IMAGE:-pavulla/kuloffice-bootstrap:latest}
-    container_name: kuloffice-bootstrap
-    environment:
-      # Bootstrap
-      - KULOFFICE_BOOTSTRAP_API_BASE_URL=${KULOFFICE_BOOTSTRAP_API_BASE_URL}
-      - KULOFFICE_BOOTSTRAP_SYSTEM_USER=${KULOFFICE_BOOTSTRAP_SYSTEM_USER}
-      - KULOFFICE_BOOTSTRAP_SYSTEM_USER_USERNAME=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_USERNAME}
-      - KULOFFICE_BOOTSTRAP_SYSTEM_USER_PASSWORD=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_PASSWORD}
-      - KULOFFICE_BOOTSTRAP_SYSTEM_USER_EMAIL=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_EMAIL}
-      - KULOFFICE_BOOTSTRAP_SYSTEM_USER_FIRST_NAME=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_FIRST_NAME}
-      - KULOFFICE_BOOTSTRAP_SYSTEM_USER_LAST_NAME=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_LAST_NAME}
-      - KULOFFICE_BOOTSTRAP_IDP=${KULOFFICE_BOOTSTRAP_IDP}
-      - KULOFFICE_BOOTSTRAP_IDP_NAME=${KULOFFICE_BOOTSTRAP_IDP_NAME}
-      - KULOFFICE_BOOTSTRAP_IDP_TYPE=${KULOFFICE_BOOTSTRAP_IDP_TYPE}
-      - KULOFFICE_BOOTSTRAP_IDP_DISCOVERY_URL=${KULOFFICE_BOOTSTRAP_IDP_DISCOVERY_URL}
-      - KULOFFICE_BOOTSTRAP_IDP_CLIENT_ID=${KULOFFICE_BOOTSTRAP_IDP_CLIENT_ID}
-      - KULOFFICE_BOOTSTRAP_IDP_CLIENT_SECRET=${KULOFFICE_BOOTSTRAP_IDP_CLIENT_SECRET}
-      - KULOFFICE_BOOTSTRAP_IDP_ISSUER_URL=${KULOFFICE_BOOTSTRAP_IDP_ISSUER_URL}
-    restart: unless-stopped
-    # Use entrypoint to ensure proper command execution
-    entrypoint: /bin/sh
-    command: -c "sleep 30 && /opt/kuloffice/bin/kuloffice-bootstrap"
+  # kuloffice-bootstrap:
+  #   image: ${KULOFFICE_BOOTSTRAP_IMAGE:-pavulla/kuloffice-bootstrap:latest}
+  #   container_name: kuloffice-bootstrap
+  #   environment:
+  #     # Bootstrap
+  #     - KULOFFICE_BOOTSTRAP_API_BASE_URL=${KULOFFICE_BOOTSTRAP_API_BASE_URL}
+  #     - KULOFFICE_BOOTSTRAP_SYSTEM_USER=${KULOFFICE_BOOTSTRAP_SYSTEM_USER}
+  #     - KULOFFICE_BOOTSTRAP_SYSTEM_USER_USERNAME=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_USERNAME}
+  #     - KULOFFICE_BOOTSTRAP_SYSTEM_USER_PASSWORD=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_PASSWORD}
+  #     - KULOFFICE_BOOTSTRAP_SYSTEM_USER_EMAIL=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_EMAIL}
+  #     - KULOFFICE_BOOTSTRAP_SYSTEM_USER_FIRST_NAME=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_FIRST_NAME}
+  #     - KULOFFICE_BOOTSTRAP_SYSTEM_USER_LAST_NAME=${KULOFFICE_BOOTSTRAP_SYSTEM_USER_LAST_NAME}
+  #     - KULOFFICE_BOOTSTRAP_IDP=${KULOFFICE_BOOTSTRAP_IDP}
+  #     - KULOFFICE_BOOTSTRAP_IDP_NAME=${KULOFFICE_BOOTSTRAP_IDP_NAME}
+  #     - KULOFFICE_BOOTSTRAP_IDP_TYPE=${KULOFFICE_BOOTSTRAP_IDP_TYPE}
+  #     - KULOFFICE_BOOTSTRAP_IDP_DISCOVERY_URL=${KULOFFICE_BOOTSTRAP_IDP_DISCOVERY_URL}
+  #     - KULOFFICE_BOOTSTRAP_IDP_CLIENT_ID=${KULOFFICE_BOOTSTRAP_IDP_CLIENT_ID}
+  #     - KULOFFICE_BOOTSTRAP_IDP_CLIENT_SECRET=${KULOFFICE_BOOTSTRAP_IDP_CLIENT_SECRET}
+  #     - KULOFFICE_BOOTSTRAP_IDP_ISSUER_URL=${KULOFFICE_BOOTSTRAP_IDP_ISSUER_URL}
+  #   restart: unless-stopped
+  #   # Use entrypoint to ensure proper command execution
+  #   entrypoint: /bin/sh
+  #   command: -c "sleep 30 && /opt/kuloffice/bin/kuloffice-bootstrap"
 
   kuloffice-db:
     image: postgres:17
