adding message size config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - KULOFFICE_SERVER_GRPC_PORT=${KULOFFICE_SERVER_GRPC_PORT}
       - KULOFFICE_SERVER_HTTP_PORT=${KULOFFICE_SERVER_HTTP_PORT}
 
+      # Server Config
+      - KULOFFICE_SERVER_GRPC_MAX_RECV_MSG_SIZE=${KULOFFICE_SERVER_GRPC_MAX_RECV_MSG_SIZE}
+      - KULOFFICE_SERVER_GRPC_MAX_SEND_MSG_SIZE=${KULOFFICE_SERVER_GRPC_MAX_SEND_MSG_SIZE}
+
       # Database
       - KULOFFICE_DATABASE_URL=${KULOFFICE_DATABASE_URL}
 
