add nuib api environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,12 @@ services:
       - KULOFFICE_MINIAILIVE_LIVENESS_PROBABILITY_THRESHOLD=${KULOFFICE_MINIAILIVE_LIVENESS_PROBABILITY_THRESHOLD}
       # License
       - KULOFFICE_LICENSE_KEY=${KULOFFICE_LICENSE_KEY}
+
+      #NUIB API
+      - KULOFFICE_NUIBAPI_REQ_SINGULAR_URL=${KULOFFICE_NUIBAPI_REQ_SINGULAR_URL}
+      - KULOFFICE_NUIBAPI_REQ_COLECTIVO_URL=${KULOFFICE_NUIBAPI_REQ_COLECTIVO_URL}
+      - KULOFFICE_NUIBAPI_RESPONSE_URL=${KULOFFICE_NUIBAPI_RESPONSE_URL}
+      - KULOFFICE_NUIBAPI_API_KEY=${KULOFFICE_NUIBAPI_API_KEY}
     restart: unless-stopped
     depends_on:
       kuloffice-db:
