--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - KULOFFICE_SERVER_GRPC_PORT=${KULOFFICE_SERVER_GRPC_PORT}
       - KULOFFICE_SERVER_HTTP_PORT=${KULOFFICE_SERVER_HTTP_PORT}
 
+      # Server Config
+      - KULOFFICE_SERVER_GRPC_MAX_RECV_MSG_SIZE=${KULOFFICE_SERVER_GRPC_MAX_RECV_MSG_SIZE}
+      - KULOFFICE_SERVER_GRPC_MAX_SEND_MSG_SIZE=${KULOFFICE_SERVER_GRPC_MAX_SEND_MSG_SIZE}
+
       # Database
       - KULOFFICE_DATABASE_URL=${KULOFFICE_DATABASE_URL}
 
@@ -24,6 +28,19 @@ services:
       - KULOFFICE_SMS_PROVIDER_ID=${KULOFFICE_SMS_PROVIDER_ID}
       - KULOFFICE_SMS_LIVE=${KULOFFICE_SMS_LIVE}
 
+      #Adapter
+      - KULOFFICE_ADAPTER_BLNK_BASE_URL=${KULOFFICE_ADAPTER_BLNK_BASE_URL}
+      - KULOFFICE_ADAPTER_BLNK_LEDGER_PAYOUT=${KULOFFICE_ADAPTER_BLNK_LEDGER_PAYOUT}
+      - KULOFFICE_ADAPTER_BLNK_LEDGER_PAYIN=${KULOFFICE_ADAPTER_BLNK_LEDGER_PAYIN}
+      - KULOFFICE_ADAPTER_BLNK_LEDGER_PNLO=${KULOFFICE_ADAPTER_BLNK_LEDGER_PNLO}
+      - KULOFFICE_ADAPTER_BLNK_LEDGER_PNLI=${KULOFFICE_ADAPTER_BLNK_LEDGER_PNLI}
+      - KULOFFICE_ADAPTER_BLNK_LEDGER_CUSTOMER_ACCOUNTS=${KULOFFICE_ADAPTER_BLNK_LEDGER_CUSTOMER_ACCOUNTS}
+      - KULOFFICE_ADAPTER_BLNK_LEDGER_DEPOSIT=${KULOFFICE_ADAPTER_BLNK_LEDGER_DEPOSIT}
+      - KULOFFICE_ADAPTER_BLNK_BALANCE_DEPOSIT=${KULOFFICE_ADAPTER_BLNK_BALANCE_DEPOSIT}
+
+      #Engine
+      - KULOFFICE_ENGINE_RETRIES=${KULOFFICE_ENGINE_RETRIES}
+
       #MiniAiLive
       - KULOFFICE_MINIAILIVE_FACE_LIVESS_URL=${KULOFFICE_MINIAILIVE_FACE_LIVENESS_URL}
       - KULOFFICE_MINIAILIVE_FACE_MATCH_URL=${KULOFFICE_MINIAILIVE_FACE_MATCH_URL}
@@ -31,7 +48,9 @@ services:
       - KULOFFICE_MINIAILIVE_DOCUMENT_EXTRACTION_URL=${KULOFFICE_MINIAILIVE_DOCUMENT_EXTRACTION_URL}
       - KULOFFICE_MINIAILIVE_LIVENESS_PROBABILITY_THRESHOLD=${KULOFFICE_MINIAILIVE_LIVENESS_PROBABILITY_THRESHOLD}
       # License
+
       - KULOFFICE_LICENSE_KEY=${KULOFFICE_LICENSE_KEY}
+
     restart: unless-stopped
     depends_on:
       kuloffice-db:
