add messages templates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,11 @@ services:
       - KULOFFICE_NUIBAPI_REQ_COLECTIVO_URL=${KULOFFICE_NUIBAPI_REQ_COLECTIVO_URL}
       - KULOFFICE_NUIBAPI_RESPONSE_URL=${KULOFFICE_NUIBAPI_RESPONSE_URL}
       - KULOFFICE_NUIBAPI_API_KEY=${KULOFFICE_NUIBAPI_API_KEY}
+
+      #SMS Templates
+      - KULOFFICE_MESSAGE_TRANSFER=${KULOFFICE_MESSAGE_TRANSFER}
+      - KULOFFICE_MESSAGE_DEPOSIT=${KULOFFICE_MESSAGE_DEPOSIT}
+      - KULOFFICE_MESSAGE_RECEIVE=${KULOFFICE_MESSAGE_RECEIVE}
     restart: unless-stopped
     depends_on:
       kuloffice-db:
