add check balance template

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       - KULOFFICE_ENGINE_MESSAGE_TRANSFER=${KULOFFICE_ENGINE_MESSAGE_TRANSFER}
       - KULOFFICE_ENGINE_MESSAGE_DEPOSIT=${KULOFFICE_ENGINE_MESSAGE_DEPOSIT}
       - KULOFFICE_ENGINE_MESSAGE_RECEIVE=${KULOFFICE_ENGINE_MESSAGE_RECEIVE}
+      - KULOFFICE_ENGINE_MESSAGE_CHECKBALANCE=${KULOFFICE_ENGINE_MESSAGE_CHECKBALANCE}
     restart: unless-stopped
     depends_on:
       kuloffice-db:
